--- a/views/happy.hbs
+++ b/views/happy.hbs
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1>
-  <meta name="author" content="">
-  <meta name="description" content=" ">
-  <meta name="keywords" content="">
+  <meta name="author" content="Kaiser Chan">
+  <meta name="description" content="happy birthday song generator">
+  <meta name="keywords" content="cs3, nodejs">
   <title>Chan - CS 3 </title>
   <!-- using the w3.css framework to show how predefined css classes can be used inside an html document.  -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -37,6 +37,8 @@
     <h2>Output</h2>
     <!-- Place your output here -->
     {{{output}}}
+    <h2>Happy Birthday Song</h2>
+    {{{song}}}
   </section>
 
   <footer class="w3-container ">
