--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width", initial-scale=1>
-  <meta name="author" content="">
-  <meta name="description" content=" ">
-  <meta name="keywords" content="">
+  <meta name="author" content="Kaiser Chan">
+  <meta name="description" content="happy birthday song generator">
+  <meta name="keywords" content="cs3, nodejs">
   <title>Chan - CS 3 </title>
   <!-- using the w3.css framework to show how predefined css classes can be used inside an html document.  -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -69,7 +69,7 @@
       <!-- clicking on the submit button activates the onsubmit event handler attached to the form tag -->
       <div id="guests">  </div>
         <input class="w3-button w3-black w3-margin" type="submit" value="Submit">
-         <input class="w3-button w3-black w3-margin" type="reset" value="Submit">
+         <input class="w3-button w3-black w3-margin" type="reset" value="Reset">
       </div>
       </div>
       
