--- a/public/style.css
+++ b/public/style.css
@@ -108,7 +108,7 @@ input[type='text'], textarea {
 }
 
 footer {
-  position: fixed;
+  /*position: fixed;*/
   left: 0;
   bottom: 0;
   width:100%;
@@ -120,6 +120,7 @@ footer {
   padding-left: 20px;
   padding-right: 20px;
   overflow: auto;
+  margin-top: 20px;
 }
 
 img.rwrap {
